# scherzo-cloud-cli

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  devenv.nix  release.toml
.github/workflows/: check.yml
nix/: package.nix
scripts/: check  check-release  check-structure  check-test-git-isolation  fixture-git  plan-release  test-fixture-git  test-git-isolation-check  test-release  test-release-planner
src/: build_info.rs  cli.rs  main.rs  tls.rs
src/api/: current_principal.rs  http_client.rs  http_util.rs  human_principal.rs  mod.rs  problem.rs  signup.rs
src/api/current_principal/: tests.rs
src/cli/: account.rs  auth.rs  principal.rs  runner.rs  version.rs
src/cli/account/: signup.rs
src/cli/auth/: deployment.rs  login.rs  logout.rs  status.rs
src/cli/runner/: doctor.rs  serve.rs
src/human_auth/: cancellation.rs  credentials.rs  deployment.rs  device_authorization.rs  mod.rs  status.rs
src/human_auth/credentials/: tests.rs
src/human_auth/device_authorization/: tests.rs
src/runner/: credential.rs  mod.rs
src/runner/doctor/: git.rs  mod.rs  process.rs
src/runner/service/: backoff.rs  config.rs  connection.rs  determinism_spike.rs  mod.rs  test_support.rs
src/runner_protocol/: generated.rs  mod.rs
tests/: cli.rs
tests/cli/: account_signup.rs  auth_login.rs
tests/fixtures/runner-protocol/v1/invalid/: extra-envelope-field.json  extra-payload-field.json  invalid-runner-id.json  non-utc-timestamp.json  sequence-zero.json  unknown-type.json  unsupported-protocol-version.json  wrong-direction.json
tests/fixtures/runner-protocol/v1/valid/: cloud-assignment-offer.json  cloud-observation-ack.json  (+4 more)
