[package]
name = "scherzo-cloud"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Command-line interface and runner for Scherzo Cloud"
license = "Apache-2.0"
repository = "https://github.com/scherzo-systems/scherzo-cloud-cli"
publish = false

[workspace]
members = ["."]
resolver = "3"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
clap = { version = "4.6.3", features = ["derive"] }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "form", "json", "query", "rustls-no-provider"] }
rustls = { version = "0.23.42", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
url = "2.5.8"
